--- a/app/src/main/res/layout/activity_address.xml
+++ b/app/src/main/res/layout/activity_address.xml
@@ -5,7 +5,7 @@
 
 
     <Button
-        android:id="@+id/button_text"
+        android:id="@+id/button_add_address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Add new address"/>
@@ -14,6 +14,6 @@
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/button_text"/>
+        android:layout_below="@id/button_add_address"/>
 
 </RelativeLayout>
