--- a/app/src/main/res/layout/shipping_detail_adapter.xml
+++ b/app/src/main/res/layout/shipping_detail_adapter.xml
@@ -21,5 +21,11 @@
         android:layout_height="wrap_content"
         android:text="City"/>
 
+    <TextView
+        android:id="@+id/text_view_type"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Type"/>
+
 
 </LinearLayout>
